@@ -1,3 +1,10 @@
+2006-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/AttributeList.java,
+	* javax/management/JMRuntimeException.java,
+	* javax/management/RuntimeOperationsException.java:
+	New files.
+	
 2006-06-15  Lillian Angel  <langel@redhat.com>
 
 	* java/awt/font/TextLayout.java:
